# pdf_cleaner

./: .gitignore  CLAUDE.md  README.md  pdf_cleaner.py  pyproject.toml
.github/: copilot-instructions.md
.github/prompts/: structured-autonomy-generate.prompt.md  structured-autonomy-implement.prompt.md  structured-autonomy-plan.prompt.md
