[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf_cleaner"
version = "0.1.0"
description = "CLI tool to sanitize PDFs by removing links and redacting text"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "i3oc9i", email = "i3oc8i@icloud.com"}
]
keywords = ["pdf", "redaction", "sanitize", "cli", "pymupdf"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "pymupdf>=1.26.7",
]

[project.urls]
Repository = "https://github.com/i3oc9i/pdf_cleaner"

[project.scripts]
pdf_cleaner = "pdf_cleaner:main"

[project.optional-dependencies]
dev = ["poethepoet"]

[tool.poe.tasks]
clean = "rm -rf dist/ __pycache__/ *.egg-info/"
build = "uv build"
